- Fixed potential issue in email addresses (#2041)
- Fixed invalid markup in several templates (#2081)
- Fixed related products loaded from product cache (#2236)
- Fixed product cache not considering product start date (#2230)
- Fixed issue with variant generator and prices (#2046)
- Fixed copy/paste of product variants into its own product
- Dropped unimplemented enableGoogleAnalytics checkbox in store config (#2102)

Version 1.3.beta2 (2011-08-28)
------------------------------
- Added: runonce script will automatically generate groups based on categories (pages)
- Added support for multilingual foreignKey in attribute table
- Added a salutation text field to addresses (Ticket #329)
- Added invisible hint to active step in checkout module (Ticket #331)
- Added new rule product conditions to limit by product attribute
- Added option to invert the rule condition (match/match not)
- Added product list caching with intelligent self-configuration to display a "please wait" message only when necessary
- Added caching tables to the maintenance cleaing options
- Added .html5 & .xhtml templates for Contao 2.10 (Ticket #457)
- Added checkout stepcount classes (Ticket #491)
- Added consistent surcharge classes to cart, checkout and order details (Ticket #494)
- Added "hide in reader mode" option to product listing
- Added SQL condition field to product listing (Ticket #114)
- Added automated table/list rendering option for array attributes
- Added price tiers to product template (Ticket #466)
- Improved: Allow subclasses of ModuleIsotopeProductFilter for filter modules
- Improved: Allow subclasses of ModuleIsotopeProductFilter to cache request
- Improved: new function generateRequestUrl to remove GET-parameters from request string
- Improved backend product list, no more "limit" option but can search & filter through all products and variants and translations (Ticket #495)
- Improved error logging in postsale script (Ticket #390)
- Improved PostFinance postsale check