@@ -43,6 +43,7 @@ Version 1.3.rc1 (2011-??-??)
 - Fixed product cache not considering product start date (#2230)
 - Fixed issue with variant generator and prices (#2046)
 - Fixed copy/paste of product variants into its own product
+- Fixed Add uniqid to order mail wildcards (#2531)
 - Dropped unimplemented enableGoogleAnalytics checkbox in store config (#2102)
 
 Version 1.3.beta2 (2011-08-28)
